--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,14 @@ version: "3.8"
 
 services:
   db:
-    image: postgres:12.1
+    image: postgres:15
     container_name: postgres
     restart: always
     environment:
-      POSTGRES_USER: localhost
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
       POSTGRES_DB: meu_banco
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
-
-volumes:
-  pgdata:
+      - ./data:/var/lib/postgresql/data
